Fix scrollbars issue on iPhones, header text wrapping

--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,7 @@
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
+    -webkit-appearance: none;
     display: none;
   }
  /* Hide scrollbar for IE, Edge and Firefox */
